# pavarotti-template

./: README.md  pyproject.toml
config/: default.yaml
scripts/: add_and_print.py
src/my_project/: __init__.py  main.py
src/my_project/utils/: __init__.py  add.py  add_wrong.py
tests/: __init__.py  test_add.py
