# Mude o nome do "my_project" para o nome do seu projeto

[project]
name = "my_project" # Altere "my_project" para o nome do seu projeto
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12" # Altere "3.12" para a versão do Python que você deseja usar
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "pyright"]

[project.scripts]
my_project = "my_project.main:main" # Altere "my_project" para o nome do seu projeto

[tool.ruff]
line-length = 88
target-version = "py312" # Altere "py312" para a versão do Python que você deseja usar
fix = true
show-fixes = true
indent-width = 4
exclude = ["venv", ".venv", "env", ".env", "__pycache__"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["T201", "TD003", "FIX002", "ERA001", "S311", "COM812", "T203"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 72

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D100", "D101", "D102", "D103", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["my_project"] # Altere "my_project" para o nome do seu projeto

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12" # Altere "3.12" para a versão do Python que você deseja usar
include = ["src"]
exclude = [
    "**/venv",
    "**/.venv",
    "**/env",
    "**/.env",
    "**/node_modules",
    "**/__pycache__",
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "src" }]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.14.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = { "" = "src" }
